// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > renders Slider unchanged 1`] = `
<div>
  <div
    class="memori--slider-container"
    style="--percentage: 50%;"
  >
    <div
      class="memori--slider-header"
    >
      <div
        class="memori--slider-value"
      >
        50
      </div>
    </div>
    <div
      class="memori--slider-track-container"
    >
      <div
        class="memori--slider-track"
      >
        <div
          class="memori--slider-track-fill"
        />
      </div>
      <div
        class="memori--slider-marks"
      >
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            0
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            25
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            50
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            75
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="memori--slider-thumb"
        data-headlessui-state=""
        role="slider"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider > renders Slider with different step unchanged 1`] = `
<div>
  <div
    class="memori--slider-container"
    style="--percentage: 50%;"
  >
    <div
      class="memori--slider-header"
    >
      <div
        class="memori--slider-value"
      >
        50
      </div>
    </div>
    <div
      class="memori--slider-track-container"
    >
      <div
        class="memori--slider-track"
      >
        <div
          class="memori--slider-track-fill"
        />
      </div>
      <div
        class="memori--slider-marks"
      >
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            0
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            25
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            50
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            75
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="memori--slider-thumb"
        data-headlessui-state=""
        role="slider"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Slider > renders Slider with disabled prop unchanged 1`] = `
<div>
  <div
    class="memori--slider-container memori--slider-disabled"
    style="--percentage: 50%;"
  >
    <div
      class="memori--slider-header"
    >
      <div
        class="memori--slider-value"
      >
        50
      </div>
    </div>
    <div
      class="memori--slider-track-container"
    >
      <div
        class="memori--slider-track"
      >
        <div
          class="memori--slider-track-fill"
        />
      </div>
      <div
        class="memori--slider-marks"
      >
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            0
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            25
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            50
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            75
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="memori--slider-thumb"
        data-disabled=""
        data-headlessui-state="disabled"
        role="slider"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`Slider > renders Slider with label prop unchanged 1`] = `
<div>
  <div
    class="memori--slider-container"
    style="--percentage: 50%;"
  >
    <div
      class="memori--slider-header"
    >
      <div
        class="memori--slider-label"
      >
        Test
      </div>
      <div
        class="memori--slider-value"
      >
        50
      </div>
    </div>
    <div
      class="memori--slider-track-container"
    >
      <div
        class="memori--slider-track"
      >
        <div
          class="memori--slider-track-fill"
        />
      </div>
      <div
        class="memori--slider-marks"
      >
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            0
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            25
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            50
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            75
          </span>
        </div>
        <div
          class="memori--slider-mark"
        >
          <div
            class="memori--slider-mark-line"
          />
          <span
            class="memori--slider-mark-value"
          >
            100
          </span>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="memori--slider-thumb"
        data-headlessui-state=""
        role="slider"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
